[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actionkv_v2 = { version = "0.1.0", path = "../actionkv_v2" }
bincode = "1.3.3"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.71"
